quoin-macros-tests/tests/ui/component_missing_render.stderr
error: Missing render block. Add `render { ... }` to your component
 --> tests/ui/component_missing_render.rs:3:5
  |
3 |     Test {
  |     ^^^^
